--- a/build.gradle
+++ b/build.gradle
@@ -12,5 +12,6 @@ repositories {
 }
 
 dependencies {
+    compile group: 'com.google.firebase', name: 'firebase-admin', version: '7.0.1'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
