--- a/build.gradle
+++ b/build.gradle
@@ -2,16 +2,16 @@ plugins {
     id 'java'
 }
 
-group 'org.example'
-version '1.0-SNAPSHOT'
+//group 'org.example'
+//version '1.0-SNAPSHOT'
 
-sourceCompatibility = 1.8
+//sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    compile group: 'com.google.firebase', name: 'firebase-admin', version: '7.0.1'
+    compile group: 'com.google.firebase', name: 'firebase-admin', version: '5.6.0'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
