--- a/build.gradle
+++ b/build.gradle
@@ -2,10 +2,9 @@ plugins {
     id 'java'
 }
 
-//group 'org.example'
-//version '1.0-SNAPSHOT'
+version '1.0'
 
-//sourceCompatibility = 1.8
+sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
